RESOLVED FIXED218474
Crash under WebGLRenderingContextBase::scheduleTaskToDispatchContextLostEvent()
https://bugs.webkit.org/show_bug.cgi?id=218474
Summary Crash under WebGLRenderingContextBase::scheduleTaskToDispatchContextLostEvent()
Chris Dumez
Reported 2020-11-02 19:37:09 PST
Crash under WebGLRenderingContextBase::scheduleTaskToDispatchContextLostEvent(): ASSERTION FAILED: m_wrapper ./bindings/js/JSEventListener.h(125) : JSC::JSObject *WebCore::JSEventListener::ensureJSFunction(WebCore::ScriptExecutionContext &) const 1 0x10e9ce1b9 WTFCrash 2 0x1235b9abb WTFCrashWithInfo(int, char const*, char const*, int) 3 0x126091249 WebCore::JSEventListener::ensureJSFunction(WebCore::ScriptExecutionContext&) const 4 0x1260905a2 WebCore::JSEventListener::handleEvent(WebCore::ScriptExecutionContext&, WebCore::Event&) 5 0x1267c93bb WebCore::EventTarget::innerInvokeEventListeners(WebCore::Event&, WTF::Vector<WTF::RefPtr<WebCore::RegisteredEventListener, WTF::RawPtrTraits<WebCore::RegisteredEventListener>, WTF::DefaultRefDerefTraits<WebCore::RegisteredEventListener> >, 1ul, WTF::CrashOnOverflow, 16ul, WTF::FastMalloc>, WebCore::EventTarget::EventInvokePhase) 6 0x1267c5642 WebCore::EventTarget::fireEventListeners(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) 7 0x126853f2a WebCore::Node::handleLocalEvents(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) 8 0x126797de0 WebCore::EventContext::handleLocalEvents(WebCore::Event&, WebCore::EventTarget::EventInvokePhase) const 9 0x1267988fb WebCore::dispatchEventInDOM(WebCore::Event&, WebCore::EventPath const&) 10 0x126798415 WebCore::EventDispatcher::dispatchEvent(WebCore::Node&, WebCore::Event&) 11 0x126853f7d WebCore::Node::dispatchEvent(WebCore::Event&) 12 0x126eabd57 WebCore::WebGLRenderingContextBase::scheduleTaskToDispatchContextLostEvent()::$_12::operator()() const 13 0x126eabcc9 WTF::Detail::CallableWrapper<WebCore::WebGLRenderingContextBase::scheduleTaskToDispatchContextLostEvent()::$_12, void>::call() 14 0x1235c84ca WTF::Function<void ()>::operator()() const 15 0x126eab339 void WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::HTMLCanvasElement>(WebCore::HTMLCanvasElement&, WebCore::TaskSource, WTF::Function<void ()>&&)::'lambda'()::operator()() const 16 0x126eab079 WTF::Detail::CallableWrapper<void WebCore::ActiveDOMObject::queueTaskKeepingObjectAlive<WebCore::HTMLCanvasElement>(WebCore::HTMLCanvasElement&, WebCore::TaskSource, WTF::Function<void ()>&&)::'lambda'(), void>::call() 17 0x1235c84ca WTF::Function<void ()>::operator()() const 18 0x1267cc3c9 WebCore::EventLoopFunctionDispatchTask::execute() 19 0x1267c2a1a WebCore::EventLoop::run() 20 0x1269576b0 WebCore::WindowEventLoop::didReachTimeToRun() This is impacting the following tests on the bots: webgl/1.0.3/conformance/glsl/misc/non-ascii-comments.vert.html webgl/2.0.0/conformance/glsl/bugs/sampler-array-using-loop-index.html
Attachments
Patch (2.32 KB, patch)
2020-11-02 19:41 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2020-11-02 19:41:03 PST
Geoffrey Garen
Comment 2 2020-11-02 19:52:55 PST
Comment on attachment 412998 [details] Patch r=me
EWS
Comment 3 2020-11-02 20:20:42 PST
Committed r269285: <https://trac.webkit.org/changeset/269285> All reviewed patches have been landed. Closing bug and clearing flags on attachment 412998 [details].
Note You need to log in before you can comment on or make changes to this bug.