Crash under WebGLRenderingContextBase::scheduleTaskToDispatchContextLostEvent() https://bugs.webkit.org/show_bug.cgi?id=218474

Reviewed by Geoffrey Garen.

After r269227, event loop tasks can get executed even after the script execution context
has been stopped. This introduce a flaky crash under:
WebGLRenderingContextBase::scheduleTaskToDispatchContextLostEvent()

This patch updates the function to not attempt to dispatch the event after the context
has been stopped.

No new tests, covered by the following tests that are flaky crashing in debug:
- webgl/1.0.3/conformance/glsl/misc/non-ascii-comments.vert.html
- webgl/2.0.0/conformance/glsl/bugs/sampler-array-using-loop-index.html

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::scheduleTaskToDispatchContextLostEvent):


Canonical link: https://commits.webkit.org/231136@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269285 268f45cc-cd09-0410-ab3c-d52691b4dbfc